add auth interceptor, utilize local storage

--- a/stem-explorer-ng/angular.json
+++ b/stem-explorer-ng/angular.json
@@ -116,15 +116,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
             ]
           }
         },
@@ -141,6 +137,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "stem-explorer-ng"
+    }
+  },
+  "defaultProject": "stem-explorer-ng",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
