--- a/stem-explorer-ng/package.json
+++ b/stem-explorer-ng/package.json
@@ -36,9 +36,12 @@
         "@zxing/ngx-scanner": "3.0.0",
         "angular-google-tag-manager": "^1.1.4",
         "firebase": "^7.19.1",
+        "ng-particles": "^2.22.0",
         "rxjs": "~6.5.5",
         "source-map-explorer": "^2.4.2",
         "tslib": "^2.0.0",
+        "tsparticles": "^1.39.0",
+        "tsparticles-shape-confetti": "^1.14.2",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
